1998-12-21  Jim Kingdon

	* sanity.sh (rcs3): New test, for some error handling cases
	involving parsing RCS files.

1998-12-16  Jim Meyering  <meyering@ascend.com>

	* rcs.c (RCS_getdate): Handle the case in which a file is first
	imported after its initial version has been created.
	* sanity.sh (import-after-initial): New test for that.

1998-12-17  Jim Kingdon

	* server.c (serve_root): Pserver_Repos only exists if
	AUTH_SERVER_SUPPORT is defined.

1998-12-12  Jim Kingdon, and Derek R. Price of Stortek.

	* sanity.sh (multiroot): Change + to ${PLUS}.

1998-12-12  Jim Kingdon, and Gary Young of Motorola

	* sanity.sh (admin): In tests admin-13, admin-25, and admin-29,
	allow 4 digit year in addition to 2 digit year.

1998-12-12  Jim Kingdon

	* sanity.sh (log): New tests log-14a and log-14b test for -rHEAD
	and for HEAD as (nonexistent) file name.

1998-12-02  Jim Kingdon

	* version.c: Squish version number to 1.10.4.1.

	* version.c: Version 1.10.4.

1998-11-24  Jim Kingdon

	* recurse.c (do_file_proc): Check for errors from RCS_parse.
	* sanity.sh (rcslib-symlink-7 through rcslib-symlink-10): New
	tests, test for this.

	* sanity.sh (reposmv-2): Adjust for 22-Nov change to Find_Names.

	* entries.c (Register): If we can't write Entries.Log, make it a
	nonfatal error.
	* sanity.sh (dirs2): Test for this fix.

	* sanity.sh (dirs2): Clean up working directory at end of test.

1998-11-23  Jim Kingdon

	* sanity.sh (dirs2): New test, for some more cases involving
	deleting directories and such.

	* sanity.sh (dirs): Update for yesterday's change in Find_Names
	error handling.  The error in dirs-4 is fairly different now; in
	dirs-3 and dirs-3a it is the obvious change.

1998-11-22  Jim Kingdon

	* sanity.sh (release): Move the commments listing "cvs release"
	tests from modules2-6 to here.
	* release.c (release): Update comment to reflect "? foo" case.

	* find_names.c (Find_Names): If we can't read the repository, make